--- a/com.kanata.plist
+++ b/com.kanata.plist
@@ -14,9 +14,9 @@
     <key>ProgramArguments</key>
     <array>
         <string>sudo</string>
-        <string>{HOME}/.local/bin/kanata</string>
+        <string>{kanata_binary}</string>
         <string>--cfg</string>
-        <string>{HOME}/.config/kanata/custom.kbd</string>
+        <string>{kanata_config}</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
